2.8: Python API: Application Timers do not work in registered scripts #62050

Closed
opened 2019-02-28 15:45:14 +01:00 by Marc · 7 comments

System Information
Operating system: Windows 7, 64bit
Graphics card: N/A

Blender Version
Broken:
2.80, dd9cedddae, win64

Short description of error

Application Timers are not fired if they are registered in a registered script.

Exact steps for others to reproduce the error

Just use the following example in a registered script and check "Auto run scripts" in preferences.

import bpy

def every_2_seconds():
    print("Hello World")
    return 2.0

print('main')
bpy.app.timers.register(every_2_seconds)

Expected behavior

Hello World is printed every 2 seconds.

Actual behavior

Hello World is not printed (but the script run as I see main in the console).

Further information

Example works as expected if run with "Run Script" button.

**System Information** Operating system: Windows 7, 64bit Graphics card: N/A **Blender Version** Broken: 2.80, dd9cedddae69, win64 **Short description of error** Application Timers are not fired if they are registered in a registered script. **Exact steps for others to reproduce the error** Just use the following example in a registered script and check "Auto run scripts" in preferences. ``` import bpy def every_2_seconds(): print("Hello World") return 2.0 print('main') bpy.app.timers.register(every_2_seconds) ``` **Expected behavior** Hello World is printed every 2 seconds. **Actual behavior** Hello World is not printed (but the script run as I see `main` in the console). **Further information** Example works as expected if run with "Run Script" button.
Author

Added subscriber: @schlamar

Added subscriber: @schlamar
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Jacques Lucke self-assigned this 2019-02-28 15:54:56 +01:00
Member

Does the problem still exist when you make the timer persistent?

Does the problem still exist when you make the timer persistent?
Author

The example works with persistent=True. Though, I still think this is unexpected behavior.

The example works with persistent=True. Though, I still think this is unexpected behavior.
Member

I know, fixing it right now.

I know, fixing it right now.

This issue was referenced by 921c37bfa3

This issue was referenced by 921c37bfa3108708cb6c2a6cd7c1b1a588be2d74
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62050
No description provided.