Fix T62050: remove non-persistent timers in load-pre callback

This actually makes more sense than removing them in the
load-post callback. During load, the file might register
timers that would be removed immediately.